bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Dependency__c/Business_Process_Step_Task_Dependency__c.object-meta.xml
<CustomObject>
    <label>Business Process Step Task Dependency</label>
    <nameField>
        <displayFormat>BPSTD-{00000000}</displayFormat>
        <label>Business Process Step Task Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Process Step Task Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>