bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Dependency__c/fields/Business_Process_Step_Task_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Step_Task_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process Step Task Mapping</label>
    <referenceTo>Business_Process_Step_Task_Mapping__c</referenceTo>
    <relationshipLabel
  >Business Process Step Task Dependencies</relationshipLabel>
    <relationshipName>Business_Process_Step_Task_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>