bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Dependency__c/fields/Depend_On_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Task_Name__c</fullName>
    <formula>Depend_Upon__r.Business_Process_Task__r.Name</formula>
    <label>Depend On Task Name</label>
    <type>Text</type>
</CustomField>