bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Dependency__c/fields/Depend_Upon__c.field-meta.xml
<CustomField>
    <fullName>Depend_Upon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depend Upon</label>
    <referenceTo>Business_Process_Step_Task_Mapping__c</referenceTo>
    <relationshipLabel
  >Business Process Step Task Dependencies (Depend Upon)</relationshipLabel>
    <relationshipName
  >Business_Process_Step_Task_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>