bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Dependency__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <formula>Business_Process_Step_Task_Mapping__r.Business_Process_Task__r.Name</formula>
    <label>Task Name</label>
    <type>Text</type>
</CustomField>