bplm/sfdx-src/main/default/objects/Business_Process_Step_Task_Dependency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Process_Step_Task_Mapping__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Depend_On_Task_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>